# end2end-mcp

./: .env.example  .env_example  .gitignore  LICENSE  README.md  client.py  example_config.json  memo.txt  mock.csv  pyproject.toml  server.py
client/: client.py  utils.py
server/shioaji-server/: config.py  parser.py  pyproject.toml  server.py
server/weather-server/: tool.py
src/need-client-integrate/: prompts.py  server.py  utils.py
src/negg-server/: customers.json  path.py  pyproject.toml  server.py  utils.py
src/negg-server/forms/: D123456789_20250331_161013.json  D123456789_20250331_161747.json  D123456789_20250331_161750.json  D123456789_20250331_164209.json  D123456789_20250331_164257.json  D123456789_20250331_183009.json
src/shioaji-mcp/: api_test.py  parser.py  utils.py
src/shioaji-mcp-openai/: client.py  parser.py  pyproject.toml  server.py  utils.py
src/weather-server/: tool.py
