[project]
name = "shoaji-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "mcp[cli]>=1.5.0",
    "openai-agents>=0.0.7",
    "openai>=1.69.0",
    "pandas>=2.2.3",
    "shioaji[speed]>=1.2.5",
]
